周五的进度

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,9 +2,350 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>首页</title>
+	<title>网易严选-以严谨的态度，为中国消费者甄选天下优品</title>
+	<link rel="stylesheet" href="./style/common.css" />
+	<link rel="stylesheet" href="./style/index.css" />
 </head>
 <body>
-	<div>1234567890</div>
+	<!-- 头部 -->
+	<div class="top_nav">
+		<div class="center">
+			<div class="top_left">
+				<a href="javascript:;" class="slogan">好的生活，没那么贵</a>
+				<i class="trumpet"></i>
+				<ul class="top_list">
+					<li><a href="javascript:;">618特惠：指定款每满1000减100，...</a></li>
+					<li><a href="javascript:;">【福利】下载严选APP，抢1元包邮团，领...</a></li>
+					<li><a href="javascript:;">防诈骗公告</a></li>
+				</ul>
+			</div>
+			<div class="top_right">
+				<a href="javascript:;">登录</a>
+				<a href="javascript:;">注册</a>
+				<a href="javascript:;" class="haveshu">我的订单</a>
+				<a href="javascript:;" class="haveshu">会员</a>
+				<a href="javascript:;" class="haveshu">甄选家</a>
+				<a href="javascript:;" class="haveshu">企业采购</a>
+				<a href="javascript:;" class="haveshu kehu_down">
+					客户服务
+					<span class="kehu_up xiaotubiao"></span>
+					<b class="triangle"></b>
+					<ul class="haveshu_ul">
+						<li><span class="kehu">在线客服</span></li>
+						<li><span class="kehu">帮助中心</span></li>
+						<li><span class="kehu">商务合作</span></li>
+						<li><span class="kehu">开放平台</span></li>
+					</ul>
+				</a>
+				<a href="javascript:;" class="haveshu code_parent"><span class="shouji xiaotubiao"></span>APP<b class="triangle"></b><span class="code"><img src="./img/code.png" ><b>下载领1000元新人礼包</b></span></a>
+			</div>			
+		</div>
+	</div>
+	<div class="search">
+		<div class="center">
+			<div class="search_logo">
+				<img src="./img/logo.gif" >
+				<div class="search_line">
+					<input type="text" value="新秀丽制造商行李箱限时购疯抢中" class="search_text" />
+					<ul class="search_list">
+						<li>大家都在搜</li>
+						<li>家居特惠</li>
+						<li>洗护电器99元选4</li>
+						<li>端午美食3件85折</li>
+						<li>出行装备199减15</li>
+						<li>限时购日夜场</li>
+					</ul>
+					<i class="i1"></i>
+					<i class="i2"></i>
+					<i class="i3"><span>0</span></i>
+				</div>
+			</div>
+			<div class="search_nav">
+				<ul class="big_list">
+					<li><a href="javascript:;">首页</a></li>
+					<li class="nav_show"><a href="javascript:;">居家</a></li>
+					<li class="nav_show"><a href="javascript:;">配件</a></li>
+					<li class="nav_show"><a href="javascript:;">服装</a></li>
+					<li class="nav_show"><a href="javascript:;">电器</a></li>
+					<li class="nav_show"><a href="javascript:;">洗护</a></li>
+					<li class="nav_show"><a href="javascript:;">饮食</a></li>
+					<li class="nav_show"><a href="javascript:;">餐厨</a></li>
+					<li class="nav_show"><a href="javascript:;">婴童</a></li>
+					<li class="nav_show"><a href="javascript:;">文体</a></li>
+					<li class="nav_show"><a href="javascript:;">特色区</a></li>
+					<li class="stringent"><a href="javascript:;">为你严选</a></li>
+					<li><a href="javascript:;">众筹</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="nav_option">
+			<div class="nav_option_center">
+				<ul class="option_list">
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- 轮播图 -->
+	<div class="carousel">
+		<div class="bg">
+			<img class="focus" src="./img/1.jpg">
+			<img src="./img/2.jpg">
+			<img src="./img/3.jpg">
+			<img src="./img/4.jpg">
+			<img src="./img/5.jpg">
+			<img src="./img/6.jpg">
+			<img src="./img/7.jpg">
+			<img src="./img/8.jpg">
+		</div>
+		<ul class="carousel_list">
+			<li class="active"></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
+	<!-- 板块一 -->
+	<div class="plate1">
+		<!-- 品牌制造商 -->
+		<div class="brand">
+			<div class="title">
+				<h3>品牌制造商</h3><span>工厂直达消费者，剔除品牌溢价</span>
+				<a href="javascript:;">更多制造商&nbsp;&nbsp;&gt;</a>
+			</div>
+			<div class="manufacturer">
+				<a href="javascript:;" class="a1">
+					<img src="./img/9.jpg" class="socket_tu" />
+					<div class="word"><span>CK制造商</span><i>上新</i></div>
+					<span class="prince">25元起</span>
+				</a>
+				<a href="javascript:;" class="a1 a2">
+					<img src="./img/10.png" class="socket_tu" />
+					<div class="word"><span>Kenneth Cole制造商</span></div>
+					<span class="prince">219元起</span>
+				</a>
+				<a href="javascript:;" class="a1 a3">
+					<img src="./img/12.jpg" class="socket_tu" />
+					<div class="word"><span>Ralph Lauren制造商</span><i class="up_New">上新</i></div>
+					<span class="prince">19元起</span>
+				</a>
+				<a href="javascript:;" class="a1 a3 a4">
+					<img src="./img/13.jpg" class="socket_tu" />
+					<div class="word"><span>Birkenstock集团制造商</span></div>
+					<span class="prince">59.9元起</span>
+				</a>
+			</div>	
+		</div>
+		<!-- 新品首发 -->
+		<div class="new_commodity">
+			<div class="title">
+				<h3>新品首发</h3><span>为你寻觅世间好物</span>
+				<a href="javascript:;">更多新品&nbsp;&nbsp;&gt;</a>
+			</div>
+			<div class="new_content">
+				
+			</div>
+		</div>
+	</div>
+	<!-- 板块二 -->
+	<div class="plate2">
+		<!-- 人气推荐 -->
+		<div class="people_push">
+			<div class="title">
+				<h3>人气推荐</h3><span class="people_active">编辑推荐</span><span>热销总榜</span>
+				<a href="javascript:;">更多推荐&nbsp;&nbsp;&gt;</a>
+			</div>
+			<div class="container">
+				<div class="left_box">
+					<a href="javascript:;">
+						<img src="./img/3.png" class="big_pic" />
+					</a>
+					<p class="p1">
+						<span>爆品</span><span>特价</span>
+					</p>
+					<p class="change_hand">网易智造N520除螨吸尘器</p>
+					<p class="p3"><span>￥399</span></p>
+				</div>
+				<ul class="right_box">
+					<li>
+						<a href="javascript:;">
+							<img src="./img/4.png" class="big_pic" />
+						</a>
+						<p class="p1"><span class="tejia">特价</span>
+						</p>
+						<p class="change_hand">便携手持挂烫机</p>
+						<p class="p3"><span>￥113.05</span></p>
+					</li>
+					<li>
+						<a href="javascript:;">
+							<img src="./img/4.png" class="big_pic" />
+						</a>
+						<p class="p1"><span class="tejia">特价</span>
+						</p>
+						<p class="change_hand">便携手持挂烫机</p>
+						<p class="p3"><span>￥113.05</span></p>
+					</li>
+					<li>
+						<a href="javascript:;">
+							<img src="./img/4.png" class="big_pic" />
+						</a>
+						<p class="p1"><span class="tejia">特价</span>
+						</p>
+						<p class="change_hand">便携手持挂烫机</p>
+						<p class="p3"><span>￥113.05</span></p>
+					</li>
+					<li class="li1">
+						<a href="javascript:;">
+							<img src="./img/4.png" class="big_pic" />
+						</a>
+						<p class="p1"><span class="baopin">爆品</span><span class="tejia">特价</span>
+						</p>
+						<p class="change_hand">便携手持挂烫机</p>
+						<p class="p3"><span>￥113.05</span></p>
+					</li>
+					<li class="li1">
+						<a href="javascript:;">
+							<img src="./img/4.png" class="big_pic" />
+						</a>
+						<p class="p1"><span class="baopin">爆品</span><span class="tejia">特价</span>
+						</p>
+						<p class="change_hand">便携手持挂烫机</p>
+						<p class="p3"><span>￥113.05</span></p>
+					</li>
+					<li class="li1">
+						<a href="javascript:;">
+							<img src="./img/4.png" class="big_pic" />
+						</a>
+						<p class="p1"><span class="baopin">爆品</span><span class="tejia">特价</span>
+						</p>
+						<p class="change_hand">便携手持挂烫机</p>
+						<p class="p3"><span>￥113.05</span></p>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<!-- 板块三 -->
+	<div class="plate3">
+		<!-- 限时购 -->
+		<div class="time_buy">
+			<div class="title">
+				<h3>限时购</h3>
+				<a href="javascript:;">更多抢购&nbsp;&nbsp;&gt;</a>
+			</div>
+			<div class="left_box">
+				<a href="javascript:;">
+					<img src="./img/14.jpg" />
+				</a>
+			</div>
+		</div>
+	</div>
+	<!-- 板块四 -->
+	<div class="plate4">
+		<!-- 福利社 -->
+		<div class="welfare">
+			<div class="title">
+				<h3>福利社</h3>
+				<a href="javascript:;">查看全部福利&nbsp;&nbsp;&gt;</a>
+			</div>
+			<div class="left_box">
+				<a href="javascript:;">
+					<img src="./img/14.jpg" />
+				</a>
+			</div>
+		</div>
+	</div>
+	<!-- 板块五 -->
+	<div class="plate5">
+		<div class="textarea">
+			<div class="title">
+				<h3>居家</h3>
+				<a href="javascript:;">查看更多&nbsp;&nbsp;&gt;</a>
+				<div class="cool">
+					<span>夏凉</span>
+					<span>/</span>
+					<span>床品件套</span>
+					<span>/</span>
+					<span>被枕</span>
+					<span>/</span>
+					<span>家具</span>
+					<span>/</span>
+					<span>收纳</span>
+					<span>/</span>
+					<span>布艺软装</span>
+					<span>/</span>
+					<span>家饰</span>
+				</div>
+			</div>
+			<div class="long_pic">
+				<a href="javascript:;">
+					<img src="./img/15.jpg" />
+				</a>
+			</div>
+			<div class="long_div">
+				<ul class="long_list">
+					<li>
+						
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
+<script src="./js/jquery-1.11.3.js"></script>
+<script src="./js/show.js"></script>
+<!-- <script src="./js/carousel.js"></script> -->
+<script>
+	window.onload = function (){
+		let index = 0;
+		let timer = null;
+		function move(){
+			index++;
+			if(index >= $('img').length){
+				index = 0;
+			}
+			$('img').eq(index).fadeIn(1000).siblings().fadeOut(1000);
+			$('li').eq(index).addClass('active').siblings().removeClass('active');
+		}
+
+		function autoMove(){
+			timer = setInterval(()=>{
+				move();
+			},1000)
+		}
+
+		autoMove();
+
+		$('.carousel').hover(function(){
+			clearInterval(timer);
+		},function(){
+			autoMove();
+		})
+
+		$('li').each((k,v)=>{
+			$(v).click(function(){
+				index = k;
+				$(this).addClass('active').siblings().removeClass('active');
+				$('img').eq(index).fadeIn(1000).siblings().fadeOut(1000);
+			})
+		})
+	}
+</script>
