--- a/src/html/index.html
+++ b/src/html/index.html
@@ -153,19 +153,19 @@
 			<div class="nav_option_center">
 				<ul class="option_list">
 					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
+					<li><a href="javascript:;"><img src="./img/14.png" /><span>毛巾</span></a></li>
+					<li><a href="javascript:;"><img src="./img/15.png" /><span>被枕</span></a></li>
+					<li><a href="javascript:;"><img src="./img/16.png" /><span>家具</span></a></li>
+					<li><a href="javascript:;"><img src="./img/17.png" /><span>收纳</span></a></li>
+					<li><a href="javascript:;"><img src="./img/18.png" /><span>香薰</span></a></li>
+					<li><a href="javascript:;"><img src="./img/19.png" /><span>家饰</span></a></li>
+					<li><a href="javascript:;"><img src="./img/20.png" /><span>宠物</span></a></li>
+					<li><a href="javascript:;"><img src="./img/21.png" /><span>行李箱</span></a></li>
+					<li><a href="javascript:;"><img src="./img/22.png" /><span>搞点</span></a></li>
+					<li><a href="javascript:;"><img src="./img/23.png" /><span>小食</span></a></li>
+					<li><a href="javascript:;"><img src="./img/24.png" /><span>美妆</span></a></li>
+					<li><a href="javascript:;"><img src="./img/25.png" /><span>女鞋</span></a></li>
+					<li><a href="javascript:;"><img src="./img/26.png" /><span>袜子</span></a></li>
 				</ul>
 			</div>
 		</div>
