--- a/src/html/sign_in.html
+++ b/src/html/sign_in.html
@@ -6,6 +6,7 @@
 	<link rel="shortcut icon" href="./img/favicon.ico"/>
 	<link rel="stylesheet" href="./style/common.css" />
 	<link rel="stylesheet" href="./style/sign_in.css" />
+	<link rel="stylesheet" href="./style/verify.css" />
 </head>
 <body>
 	<!-- 右边悬浮 -->
@@ -170,7 +171,42 @@
 		</div>
 	</div>
 	<!-- 中间的内容部分 -->
-	
+	<div class="content">
+		<div class="textarea">
+			<div class="biaodan">
+				<p class="top_first">
+					<a href="javascript:;">手机号登录</a>
+					<a href="javascript">|</a>
+					<a href="javascript:;">邮箱登录</a>
+				</p>
+				<p class="top_second">
+					使用密码验证登录
+				</p>
+				<div class="phone_num">
+					<div class="phone_tubiao">
+						<i></i>
+					</div>
+					<input type="text" placeholder="请输入手机号">
+				</div>
+				<div class="verify_code"></div>
+				<div class="phone_num2">
+					<input type="text" placeholder="请输入短信验证码">
+					<span class="huoqu_code">获取验证码</span>
+				</div>
+				<div class="login">登 录</div>
+				<div class="verify_bottom">
+					<i class="t1"></i>
+					<i class="t2"></i>
+					<i class="t3"></i>
+					<i class="t4"></i>
+					<span>
+						<a href="javascript:;">手机快捷注册</a>&nbsp;
+						<a href="javascript:;">遇到问题？</a>
+					</span>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- 底部 -->
 	<div class="footer">
 		<div class="white_footer">
@@ -267,3 +303,5 @@
 <script src="./js/jquery-1.11.3.js"></script>
 <script src="./js/show.js"></script>
 <script src="./js/suspend.js"></script>
+<script src="./js/verify.js"></script>
+<!-- <script>$("#imgscode").imgcode();</script>   -->
