--- a/src/html/sign_in.html
+++ b/src/html/sign_in.html
@@ -91,9 +91,9 @@
 				</ul>
 			</div>
 			<div class="top_right">
-				<a href="javascript:;">登录</a>
+				<a href="./sign_in.html">登录</a>
 				<a href="javascript:;">注册</a>
-				<a href="javascript:;" class="haveshu">我的订单</a>
+				<a href="./sign_in.html" class="haveshu">我的订单</a>
 				<a href="javascript:;" class="haveshu">会员</a>
 				<a href="javascript:;" class="haveshu">甄选家</a>
 				<a href="javascript:;" class="haveshu">企业采购</a>
@@ -173,11 +173,11 @@
 	<!-- 中间的内容部分 -->
 	<div class="content">
 		<div class="textarea">
-			<div class="biaodan">
+			<div class="biaodan biaodan1">
 				<p class="top_first">
 					<a href="javascript:;">手机号登录</a>
 					<a href="javascript">|</a>
-					<a href="javascript:;">邮箱登录</a>
+					<a href="javascript:;" class="cut_email">邮箱登录</a>
 				</p>
 				<p class="top_second">
 					使用密码验证登录
@@ -186,9 +186,13 @@
 					<div class="phone_tubiao">
 						<i></i>
 					</div>
-					<input type="text" placeholder="请输入手机号">
+					<input type="text" placeholder="请输入手机号" id="phone" name="phone" />
 				</div>
-				<div class="verify_code"></div>
+				<div class="verify_code">
+					<img src="./img/32.png" class="verify_img" />
+					<span>按住滑块，拖动完成上方拼图</span>
+					<img src="./img/33.png" class="verify_block" />
+				</div>
 				<div class="phone_num2">
 					<input type="text" placeholder="请输入短信验证码">
 					<span class="huoqu_code">获取验证码</span>
@@ -204,6 +208,69 @@
 						<a href="javascript:;">遇到问题？</a>
 					</span>
 				</div>
+			</div>
+			<div class="biaodan biaodan2">
+				<p class="top_first">
+					<a href="javascript:;" class="cut_phone">手机号登录</a>
+					<a href="javascript">|</a>
+					<a href="javascript:;">邮箱登录</a>
+				</p>
+				<div class="phone_num phone_num1">
+					<div class="phone_tubiao">
+						<i></i>
+					</div>
+					<input type="text" placeholder="邮箱账号">
+				</div>
+				<div class="phone_num phone_num2">
+					<div class="phone_tubiao">
+						<i></i>
+					</div>
+					<input type="text" placeholder="请输入密码">
+				</div>
+				<div class="login">登 录</div>
+				<div class="verify_bottom">
+					<i class="t1"></i>
+					<i class="t2"></i>
+					<i class="t3"></i>
+					<i class="t4"></i>
+					<span>
+						<a href="javascript:;">手机快捷注册</a>&nbsp;
+						<a href="javascript:;">遇到问题？</a>
+					</span>
+				</div>
+			</div>
+			<div class="biaodan biaodan3">
+				<p class="top_first">
+					<a href="javascript:;">手机号注册</a>
+					<a href="javascript">邮箱注册</a>
+					<a href="javascript:;" class="cut_email">直接登录</a>
+				</p>
+				<p class="top_second">
+					使用密码验证登录
+				</p>
+				<div class="phone_num">
+					<div class="phone_tubiao">
+						<i></i>
+					</div>
+					<input type="text" placeholder="请输入手机号" id="phone" name="phone" />
+				</div>
+				<div class="verify_code">
+					<img src="./img/32.png" class="verify_img" />
+					<span>按住滑块，拖动完成上方拼图</span>
+					<img src="./img/33.png" class="verify_block" />
+				</div>
+				<div class="phone_num2">
+					<input type="text" placeholder="请输入短信验证码">
+					<span class="huoqu_code">获取验证码</span>
+				</div>
+				<div class="phone_num phone_num2 phone_num3">
+					<div class="phone_tubiao">
+						<i></i>
+					</div>
+					<input type="text" placeholder="请输入密码">
+				</div>
+				<div class="login">注 册</div>
+				<span class="privacy">我同意<a href="javascript:;">《服务条款》</a>和<a href="javascript:;">《网易隐私政策》</a></span>
 			</div>
 		</div>
 	</div>
@@ -304,4 +371,4 @@
 <script src="./js/show.js"></script>
 <script src="./js/suspend.js"></script>
 <script src="./js/verify.js"></script>
-<!-- <script>$("#imgscode").imgcode();</script>   -->
+<script src="./js/cut_login.js"></script>
