--- a/src/html/sign_in.html
+++ b/src/html/sign_in.html
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<!-- 顶部悬浮 -->
-	<!-- <div class="top_fix">
+	<div class="top_fix" id="top_fix">
 		<div class="textarea">
 			<i class="top_fix_logo"></i>
 			<div class="search_nav">
@@ -56,28 +56,8 @@
 				<i class="i2"></i>
 				<i class="i3"><span>0</span></i>
 			</div>
-			<div class="nav_option">
-				<div class="nav_option_center">
-					<ul class="option_list">
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-						<li><a href="javascript:;"><img src="./img/1.png" /><span>夏凉</span></a></li>
-					</ul>
-				</div>
-			</div>
 		</div>
-	</div> -->
+	</div>
 	<!-- 头部 -->
 	<div class="top_nav">
 		<div class="center">
