--- a/src/html/index.html
+++ b/src/html/index.html
@@ -72,7 +72,7 @@
 			</div>
 			<div class="top_right">
 				<a href="javascript:;">登录</a>
-				<a href="javascript:;">注册</a>
+				<a href="./sign_in.html">注册</a>
 				<a href="javascript:;" class="haveshu">我的订单</a>
 				<a href="javascript:;" class="haveshu">会员</a>
 				<a href="javascript:;" class="haveshu">甄选家</a>
@@ -116,7 +116,7 @@
 			</div>
 			<div class="search_nav">
 				<ul class="big_list">
-					<li class="nav_show"><a href="javascript:;" class="nav_show_a">首页</a></li>
+					<li class="nav_show"><a href="./index.html" class="nav_show_a">首页</a></li>
 					<li class="nav_show">
 						<a href="javascript:;" class="nav_show_a">居家</a>
 						<div class="nav_option">
@@ -425,24 +425,24 @@
 						<span>¥699</span>
 					</li>
 					<li class="swiper-slide">
-						<a href="javascript"></a>
-						<b>破壁机/冷热双杯</b><br />
-						<span>¥699</span>
+						<a href="javascript" class="a1"></a>
+						<b>中华精铁爆炒锅</b><br />
+						<span>¥249</span>
 					</li>
 					<li class="swiper-slide">
-						<a href="javascript"></a>
-						<b>破壁机/冷热双杯</b><br />
-						<span>¥699</span>
+						<a href="javascript" class="a2"></a>
+						<b>女式复古老爹鞋</b><br />
+						<span>¥439</span>
 					</li>
 					<li class="swiper-slide">
-						<a href="javascript"></a>
-						<b>破壁机/冷热双杯</b><br />
-						<span>¥699</span>
+						<a href="javascript" class="a3"></a>
+						<b>网易智造3D揉捏按摩肩带</b><br />
+						<span>¥449</span>
 					</li>
 					<li class="swiper-slide">
-						<a href="javascript"></a>
-						<b>破壁机/冷热双杯</b><br />
-						<span>¥699</span>
+						<a href="javascript" class="a4"></a>
+						<b>女式牛皮细腰带</b><br />
+						<span>¥99</span>
 					</li>
 					<li class="swiper-slide">
 						<a href="javascript"></a>
@@ -496,48 +496,48 @@
 					</li>
 					<li>
 						<a href="javascript:;">
-							<img src="./img/4.png" class="big_pic" />
+							<img src="./img/40.png" class="big_pic" />
 						</a>
 						<p class="p1"><span class="tejia">特价</span>
 						</p>
-						<p class="change_hand">便携手持挂烫机</p>
-						<p class="p3"><span>￥113.05</span></p>
+						<p class="change_hand">网易智造T300无线吸尘器</p>
+						<p class="p3"><span>￥1599</span></p>
 					</li>
 					<li>
 						<a href="javascript:;">
-							<img src="./img/4.png" class="big_pic" />
+							<img src="./img/41.png" class="big_pic" />
 						</a>
 						<p class="p1"><span class="tejia">特价</span>
 						</p>
-						<p class="change_hand">便携手持挂烫机</p>
-						<p class="p3"><span>￥113.05</span></p>
+						<p class="change_hand">28寸 纯PC“铝框”拉杆箱</p>
+						<p class="p3"><span>￥351.2</span></p>
 					</li>
 					<li class="li1">
 						<a href="javascript:;">
-							<img src="./img/4.png" class="big_pic" />
+							<img src="./img/42.png" class="big_pic" />
 						</a>
 						<p class="p1"><span class="baopin">爆品</span><span class="tejia">特价</span>
 						</p>
-						<p class="change_hand">便携手持挂烫机</p>
-						<p class="p3"><span>￥113.05</span></p>
+						<p class="change_hand">天然宽篾头层青碳化竹凉席</p>
+						<p class="p3"><span>￥279</span></p>
 					</li>
 					<li class="li1">
 						<a href="javascript:;">
-							<img src="./img/4.png" class="big_pic" />
+							<img src="./img/43.png" class="big_pic" />
 						</a>
 						<p class="p1"><span class="baopin">爆品</span><span class="tejia">特价</span>
 						</p>
-						<p class="change_hand">便携手持挂烫机</p>
-						<p class="p3"><span>￥113.05</span></p>
+						<p class="change_hand">超冷感吸放湿双面夏凉被</p>
+						<p class="p3"><span>￥219</span></p>
 					</li>
 					<li class="li1">
 						<a href="javascript:;">
-							<img src="./img/4.png" class="big_pic" />
+							<img src="./img/44.png" class="big_pic" />
 						</a>
 						<p class="p1"><span class="baopin">爆品</span><span class="tejia">特价</span>
 						</p>
-						<p class="change_hand">便携手持挂烫机</p>
-						<p class="p3"><span>￥113.05</span></p>
+						<p class="change_hand">大头风扇</p>
+						<p class="p3"><span>￥69</span></p>
 					</li>
 				</ul>
 			</div>
@@ -571,10 +571,10 @@
 			<ul class="right_list">
 				<li>
 					<a href="javascript:;" class="left_a">
-						<img src="./img/5.png" />
+						<img src="./img/45.png" />
 					</a>
 					<div class="rt">
-						<h2>20寸全铝镁合金登机箱</h2>
+						<h2>网易智造全方位空气净化器</h2>
 						<p>41升超薄坚固，100%铝镁合金</p>
 						<div class="surplus">
 							<span></span>
@@ -583,20 +583,20 @@
 						<div class="Limit_price">
 							<span class="span1">限时价</span>
 							<span class="span2">¥</span>
-							<span class="span3">559.2</span>
+							<span class="span3">1599</span>
 							<span class="span4">原价&nbsp;</span>
-							<span class="span5">¥699</span>
+							<span class="span5">¥1999</span>
 						</div>
 						<a href="javascript:;" class="rob_buy">立即抢购</a>
 					</div>
 				</li>
 				<li>
 					<a href="javascript:;" class="left_a">
-						<img src="./img/5.png" />
+						<img src="./img/46.png" />
 					</a>
 					<div class="rt">
-						<h2>20寸全铝镁合金登机箱</h2>
-						<p>41升超薄坚固，100%铝镁合金</p>
+						<h2>OL风 女士弹力百搭锥形裤</h2>
+						<p>四季都爱，火遍时髦圈的锥形裤</p>
 						<div class="surplus">
 							<span></span>
 							<span>还剩500件</span>
@@ -604,20 +604,20 @@
 						<div class="Limit_price">
 							<span class="span1">限时价</span>
 							<span class="span2">¥</span>
-							<span class="span3">559.2</span>
+							<span class="span3">163</span>
 							<span class="span4">原价&nbsp;</span>
-							<span class="span5">¥699</span>
+							<span class="span5">¥199</span>
 						</div>
 						<a href="javascript:;" class="rob_buy">立即抢购</a>
 					</div>
 				</li>
 				<li class="bottom_li">
 					<a href="javascript:;" class="left_a">
-						<img src="./img/5.png" />
+						<img src="./img/47.png" />
 					</a>
 					<div class="rt">
-						<h2>20寸全铝镁合金登机箱</h2>
-						<p>41升超薄坚固，100%铝镁合金</p>
+						<h2>牛皮十字纹皮带-均码可裁剪</h2>
+						<p>商务十字纹，彰显品质</p>
 						<div class="surplus">
 							<span></span>
 							<span>还剩500件</span>
@@ -625,20 +625,20 @@
 						<div class="Limit_price">
 							<span class="span1">限时价</span>
 							<span class="span2">¥</span>
-							<span class="span3">559.2</span>
+							<span class="span3">215</span>
 							<span class="span4">原价&nbsp;</span>
-							<span class="span5">¥699</span>
+							<span class="span5">¥299</span>
 						</div>
 						<a href="javascript:;" class="rob_buy">立即抢购</a>
 					</div>
 				</li>
 				<li class="bottom_li">
 					<a href="javascript:;" class="left_a">
-						<img src="./img/5.png" />
+						<img src="./img/48.png" />
 					</a>
 					<div class="rt">
-						<h2>20寸全铝镁合金登机箱</h2>
-						<p>41升超薄坚固，100%铝镁合金</p>
+						<h2>素色暖绒盖毯</h2>
+						<p>居家卧躺小憩伴侣</p>
 						<div class="surplus">
 							<span></span>
 							<span>还剩500件</span>
@@ -646,9 +646,9 @@
 						<div class="Limit_price">
 							<span class="span1">限时价</span>
 							<span class="span2">¥</span>
-							<span class="span3">559.2</span>
+							<span class="span3">76</span>
 							<span class="span4">原价&nbsp;</span>
-							<span class="span5">¥699</span>
+							<span class="span5">¥99</span>
 						</div>
 						<a href="javascript:;" class="rob_buy">立即抢购</a>
 					</div>
@@ -700,63 +700,63 @@
 						</div>
 						<div class="fake_li fake_li2">
 							<a href="javascript:;" class="shoes">
-								<img src="./img/6.png" />
+								<img src="./img/49.png" />
 								<div class="rate">
-									7.7折
+									8.8折
 								</div>
 							</a>
 							<div class="word">
-								<p class="w1">毛毛虫儿童运动鞋</p>
+								<p class="w1">纳米喷雾活肤仪</p>
 								<p class="w2">
 									<span class="sp1">限时价</span>
 									<span class="sp2">&nbsp;￥&nbsp;</span>
-									<span class="sp3">99</span>
+									<span class="sp3">315</span>
 								</p>
 								<p class="w3">
 									<span>原价&nbsp;</span>
-									<span class="w3_prince">￥129</span>
+									<span class="w3_prince">￥359</span>
 								</p>
 								<div class="fake_button">立即抢购</div>
 							</div>
 						</div>
 						<div class="fake_li">
 							<a href="javascript:;" class="shoes">
-								<img src="./img/6.png" />
+								<img src="./img/50.png" />
 								<div class="rate">
-									7.7折
+									8.5折
 								</div>
 							</a>
 							<div class="word">
-								<p class="w1">毛毛虫儿童运动鞋</p>
+								<p class="w1">便携式多功能防水户外垫</p>
 								<p class="w2">
 									<span class="sp1">限时价</span>
 									<span class="sp2">&nbsp;￥&nbsp;</span>
-									<span class="sp3">99</span>
+									<span class="sp3">67</span>
 								</p>
 								<p class="w3">
 									<span>原价&nbsp;</span>
-									<span class="w3_prince">￥129</span>
+									<span class="w3_prince">￥79</span>
 								</p>
 								<div class="fake_button">立即抢购</div>
 							</div>
 						</div>
 						<div class="fake_li fake_li2">
 							<a href="javascript:;" class="shoes">
-								<img src="./img/6.png" />
+								<img src="./img/51.png" />
 								<div class="rate">
-									7.7折
+									9.5折
 								</div>
 							</a>
 							<div class="word">
-								<p class="w1">毛毛虫儿童运动鞋</p>
+								<p class="w1">法国制造 水晶玻璃红酒杯中号</p>
 								<p class="w2">
 									<span class="sp1">限时价</span>
 									<span class="sp2">&nbsp;￥&nbsp;</span>
-									<span class="sp3">99</span>
+									<span class="sp3">84</span>
 								</p>
 								<p class="w3">
 									<span>原价&nbsp;</span>
-									<span class="w3_prince">￥129</span>
+									<span class="w3_prince">￥89</span>
 								</p>
 								<div class="fake_button">立即抢购</div>
 							</div>
@@ -783,13 +783,13 @@
 					</div>
 					<div class="season season_down">
 						<a href="javascript:;">
-							<img src="./img/7.png" />
+							<img src="./img/52.png" />
 						</a>
 						<div class="clother_father">
-							<p class="clothes">男式塔罗彩条 拉链针织开衫</p>
+							<p class="clothes">20周年纪念款 男式修身合体牛仔裤</p>
 							<p class="clothes_prince">
-								<span class="clothes_prince_red">￥169</span>
-								<span class="clothes_prince_grey">￥329</span>
+								<span class="clothes_prince_red">￥119</span>
+								<span class="clothes_prince_grey">￥229</span>
 								<span class="clothes_shop_car"></span>
 							</p>
 						</div>
@@ -802,26 +802,26 @@
 					</div>
 					<div class="season season_up">
 						<a href="javascript:;">
-							<img src="./img/7.png" />
+							<img src="./img/53.png" />
 						</a>
 						<div class="clother_father">
-							<p class="clothes">男式塔罗彩条 拉链针织开衫</p>
+							<p class="clothes">网易严选芳香洁净洗衣凝珠</p>
 							<p class="clothes_prince">
-								<span class="clothes_prince_red">￥169</span>
-								<span class="clothes_prince_grey">￥329</span>
+								<span class="clothes_prince_red">￥63</span>
+								<span class="clothes_prince_grey">￥65</span>
 								<span class="clothes_shop_car"></span>
 							</p>
 						</div>
 					</div>
 					<div class="season season_down">
 						<a href="javascript:;">
-							<img src="./img/7.png" />
+							<img src="./img/54.png" />
 						</a>
 						<div class="clother_father">
-							<p class="clothes">男式塔罗彩条 拉链针织开衫</p>
+							<p class="clothes">不锈钢叉勺套装</p>
 							<p class="clothes_prince">
-								<span class="clothes_prince_red">￥169</span>
-								<span class="clothes_prince_grey">￥329</span>
+								<span class="clothes_prince_red">￥28</span>
+								<span class="clothes_prince_grey">￥29</span>
 								<span class="clothes_shop_car"></span>
 							</p>
 						</div>
@@ -870,27 +870,27 @@
 					</li>
 					<li>
 						<a href="javascript:;">
-							<img src="./img/8.png" />
+							<img src="./img/55.png" />
 						</a>
-						<span>爆品</span>
-						<h5>多功能人体工学转椅</h5>
-						<p>¥1399</p>
+						<span style="background: #fff;">&nbsp;</span>
+						<h5>健康饮水 宠物自循环活氧饮水器</h5>
+						<p>¥239</p>
 					</li>
 					<li>
 						<a href="javascript:;">
-							<img src="./img/8.png" />
+							<img src="./img/56.png" />
 						</a>
 						<span class="manjian">满额减</span>
-						<h5>多功能人体工学转椅</h5>
-						<p>¥1399</p>
+						<h5>3件装 河马口收纳箱</h5>
+						<p>¥789</p>
 					</li>
 					<li>
 						<a href="javascript:;">
-							<img src="./img/8.png" />
+							<img src="./img/57.png" />
 						</a>
-						<span>爆品</span>
-						<h5>多功能人体工学转椅</h5>
-						<p>¥1399</p>
+						<span style="background: #fff;">&nbsp;</span>
+						<h5>豪斯 全真皮功能沙发</h5>
+						<p>¥8599</p>
 					</li>
 				</ul>
 			</div>
@@ -916,7 +916,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/28.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -977,7 +977,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/29.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1038,7 +1038,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/30.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1099,7 +1099,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/31.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1160,7 +1160,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/32.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1221,7 +1221,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/33.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1282,7 +1282,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/34.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1343,7 +1343,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/35.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1404,7 +1404,7 @@
 			</div>
 			<div class="long_pic">
 				<a href="javascript:;">
-					<img src="./img/15.jpg" />
+					<img src="./img/36.jpg" />
 				</a>
 			</div>
 			<div class="long_div">
@@ -1497,42 +1497,6 @@
 							</div>
 							<div class="msg3">
 								<p>今年严选的龙虾酱汁设计很科学，干煸或者加水加啤酒煮都很OK，算去年的升级款吧，虾肉只只饱满，继续买起来</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<a href="javascript:;">
-							<img src="./img/19.jpg" />
-						</a>
-						<div class="message">
-							<div class="msg1">
-								<span>m****9</span>
-								<span>2018-05-24 18:39</span>
-							</div>
-							<div class="msg2">
-								<span>网易味央 黑猪肉香肠（麻辣）350g</span>
-								<span>￥118</span>
-							</div>
-							<div class="msg3">
-								<p>全家都爱吃，多次购买</p>
-							</div>
-						</div>
-					</li>
-					<li>
-						<a href="javascript:;">
-							<img src="./img/19.jpg" />
-						</a>
-						<div class="message">
-							<div class="msg1">
-								<span>m****9</span>
-								<span>2018-05-24 18:39</span>
-							</div>
-							<div class="msg2">
-								<span>网易味央 黑猪肉香肠（麻辣）350g</span>
-								<span>￥118</span>
-							</div>
-							<div class="msg3">
-								<p>全家都爱吃，多次购买</p>
 							</div>
 						</div>
 					</li>
