--- a/src/html/sign_in.html
+++ b/src/html/sign_in.html
@@ -113,7 +113,7 @@
 			</div>
 			<div class="search_nav">
 				<ul class="big_list">
-					<li><a href="javascript:;">首页</a></li>
+					<li><a href="./index.html">首页</a></li>
 					<li class="nav_show"><a href="javascript:;">居家</a></li>
 					<li class="nav_show"><a href="javascript:;">配件</a></li>
 					<li class="nav_show"><a href="javascript:;">服装</a></li>
