--- a/src/html/detail_page.html
+++ b/src/html/detail_page.html
@@ -437,10 +437,23 @@
 						</div>
 						<div class="jiade_p">
 							<span>数量</span>
-							<a href="javascript:;">
-								
+							<a href="javascript:;" class="box2">
+								<span>-</span>
+								<input type="text" value="1">
+								<span>+</span>
 							</a>
 						</div>
+					</div>
+					<div class="anniu_div">
+						<a href="javascript:;">
+							立即购买
+						</a>
+						<a href="javascript:;">
+							加入购物车
+						</a>
+						<a href="javascript:;">
+							收藏
+						</a>
 					</div>
 				</div>
 			</div>
